# Savant

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MIGRATION.md  README.md  clippy.toml  deny.toml  package-lock.json  package.json  pnpm-lock.yaml  protocol.config.yaml  rustfmt.toml
crates/agent/agent/: Cargo.toml
crates/agent/agent/examples/: sovereign_manifest.rs
crates/agent/agent/src/: graceful_shutdown.rs  lib.rs  react_speculative.rs  soul_examples.rs  subagent_registry.rs  swarm.rs
crates/agent/agent/src/compact/: classify.rs  l2.rs  mod.rs  ocean.rs  reduce.rs  schema.rs  semantic.rs
crates/agent/agent/src/consciousness/: mod.rs  narrative.rs  wonder.rs
crates/agent/agent/src/delegation/: mod.rs  profiles.rs  router.rs
crates/agent/agent/src/ensemble/: mod.rs
crates/agent/agent/src/governor/: adaptive.rs  monitor.rs  pressure.rs
crates/agent/agent/src/learning/: facet_cache.rs  facets.rs  parser.rs
crates/agent/agent/src/lsp/: discovery.rs  mod.rs
crates/agent/agent/src/memory/: mod.rs
crates/agent/agent/src/nlp/: commands.rs
crates/agent/agent/src/orchestration/: branching.rs  dag.rs  handoff.rs  handoff_tests.rs  ignition.rs  synthesis.rs  tasks.rs
crates/agent/agent/src/plugins/: mod.rs  savant_hooks.wit
crates/agent/agent/src/proactive/: context_gatherer.rs
crates/agent/agent/src/providers/: cost_router.rs  privacy_router.rs
crates/agent/agent/tests/: delegation_pipeline.rs  production.rs
crates/browser/browser/: Cargo.toml
crates/browser/browser/src/: engine.rs
crates/canvas/: Cargo.toml
crates/canvas/canvas/src/: a2ui.rs  diff.rs  lib.rs
crates/canvas/src/: types.rs
crates/channels/channels/: Cargo.toml
crates/channels/channels/src/: cli.rs  discord.rs  generic_webhook.rs  lib.rs  line.rs  matrix.rs  mattermost.rs  notion.rs  pool.rs  reddit.rs  signal.rs  telegram.rs
crates/cognitive/: Cargo.toml
crates/cognitive/src/: forge.rs  lib.rs  predictor.rs  synthesis.rs
crates/core/: Cargo.toml
crates/core/core/src/: bootstrap.rs  bus.rs  config.rs  crypto.rs  migration.rs  session.rs
crates/core/core/tests/: perf_benchmarks.rs
crates/core/src/: bootstrap.rs  db.rs  error.rs  heartbeat.rs  lib.rs
crates/core/src/fs/: registry.rs
crates/core/src/hooks/: mod.rs
crates/core/src/learning/: mod.rs
crates/core/src/memory/: mod.rs
crates/core/src/net/: mod.rs
crates/core/src/nlp/: commands.rs  mod.rs
crates/core/src/pulse/: mod.rs  watchdog.rs
crates/core/src/storage/: mod.rs
crates/core/src/traits/: mod.rs
crates/core/src/types/: mod.rs
crates/core/src/utils/: io.rs  mod.rs  ollama_vision.rs  time.rs
crates/dream/: Cargo.toml
crates/dream/dream/src/: rem.rs
crates/dream/src/: filter.rs  lib.rs  nrem.rs  scheduler.rs  vendi.rs
crates/echo/: Cargo.toml
crates/echo/echo/src/: circuit_breaker.rs  watcher.rs
crates/echo/echo/tests/: circuit_breaker_tests.rs
crates/echo/src/: compiler.rs  lib.rs  registry.rs
crates/echo/tests/: speculative_tests.rs
crates/gateway/: Cargo.toml
crates/gateway/gateway/: Cargo.toml
crates/gateway/gateway/src/: lib.rs
crates/gateway/src/: lanes.rs  lib.rs  persistence.rs  server.rs  smithery.rs  static_serve.rs
crates/gateway/src/auth/: mod.rs
crates/gateway/src/handlers/: mod.rs  schedules.rs  setup.rs  skills.rs  status.rs
crates/gateway/tests/: security_tests.rs  v1_routes_smoke_test.rs
crates/generation/: Cargo.toml
crates/generation/generation/src/: lib.rs  orchestrator.rs  prompt.rs
crates/generation/src/: cache.rs  tools.rs
crates/generation/src/backends/: diffusion.rs  mod.rs
crates/integrations/: Cargo.toml
crates/integrations/integrations/src/: error.rs  lib.rs  provider.rs  state.rs
crates/integrations/src/: registry.rs  scheduler.rs
crates/integrations/src/providers/: gmail.rs  notion.rs
crates/ipc/ipc/: Cargo.toml
crates/ipc/ipc/src/: blackboard.rs  error.rs  lib.rs
crates/mcp/mcp/: Cargo.toml
crates/mcp/mcp/src/: client.rs
crates/memory/memory/: Cargo.toml
crates/memory/memory/src/: arbiter.rs  bm25_index.rs  cross_encoder.rs  daily_log.rs  entities.rs  error.rs  lessons.rs  notifications.rs  procedural.rs  query_expansion.rs  reflective.rs  rrf_fusion.rs  safety.rs  vector_engine.rs
crates/memory/memory/tests/: crash_recovery.rs  persistence.rs  stress.rs
crates/obsidian/obsidian/: Cargo.toml
crates/obsidian/obsidian/tests/: integration.rs
crates/panopticon/: Cargo.toml
crates/panopticon/panopticon/src/: replay.rs
crates/panopticon/src/: lib.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: lib.rs
crates/sandbox/src/fs/: oci_verifier.rs
crates/sandbox/src/ipc/: mod.rs  noise_crypto.rs
crates/sandbox/src/net/: ssrf.rs
crates/sandbox/src/vmm/: agentd.rs  forensic_capture.rs  process_hardening.rs
crates/schema/: Cargo.toml
crates/schema/schema/src/: db.rs  resolution.rs
crates/schema/src/: graph.rs  indexer.rs  lib.rs  symbols.rs
crates/schema/src/extract/: mod.rs
crates/security/: Cargo.toml
crates/security/security/src/: attestation.rs  enclave.rs  lib.rs  pii.rs  proofs.rs
crates/security/src/: prompt_defense.rs  token.rs
crates/security/src/continuous/: credentials.rs  taint.rs
crates/skills/: Cargo.toml
crates/skills/skills/src/: clawhub.rs  docker.rs  lambda.rs  lib.rs  nix.rs
crates/skills/src/: hot_reload.rs  mount_security.rs  native.rs  parser.rs  security.rs
crates/skills/src/wasm/: mod.rs
crates/skills/tests/: docker_tests.rs
crates/toolforge/toolforge/: Cargo.toml
crates/toolforge/toolforge/src/: lib.rs  provenance.rs
crates/vault/: Cargo.toml
crates/vault/src/: lib.rs  master_key.rs
crates/vault/tests/: master_key_test.rs
lib/cortexadb/crates/cortexadb-py/: .gitignore  Cargo.toml  pyproject.toml  test_smoke.py  test_stress.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: chat_persistence.rs  lib.rs  main.rs
src-tauri/src/inference/: openrouter.rs
src-tauri/src/security/: master_key.rs
src-tauri/tests/: inference_smoke_test.rs  master_key_test.rs  skill_execution_smoke_test.rs  vault_dotenv_strategy_test.rs
(+402 files in other folders)
