[package]
name = "savant_canvas"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
savant_core = { path = "../core" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
similar = { version = "2.6", features = ["unicode"] }
futures = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
