[package]
name = "savant_cognitive"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
ndarray = { workspace = true, optional = true }
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rkyv = { version = "0.8.15", features = ["bytecheck"] }
savant_core = { path = "../core" }
bytecheck = "0.8.0"
uuid = { version = "1.0", features = ["v4"] }
rand = { workspace = true }
tokio = { workspace = true }

[features]
default = []
dsp = []
ml-inference = ["candle-core", "candle-nn"]

[dev-dependencies]
tracing-subscriber = "0.3"

[lints]
workspace = true
