[package]
name = "savant_core"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
fastembed = "5.12.1"
notify = "8.2.0"
pulldown-cmark = "0.13.1"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
anyhow = { workspace = true }
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
tokio-cron-scheduler = "0.15.1"
tracing = "0.1"
figment = { version = "0.10", features = ["toml", "env"] }
walkdir = "2.5"
blake3 = "1.5"
bytes = "1.10"
regex = "1.11"
tokio = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
rand = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
toml = "0.8"
sha2 = "0.10"
dotenvy = "0.15"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
signature = "2.0"
cortexadb-core = { workspace = true }
rkyv = { workspace = true }
ruvector-core = { workspace = true }
bytecheck = { workspace = true }
dashmap = { workspace = true }
libc = { workspace = true }
num_cpus = { workspace = true }
tiktoken-rs = "0.6"
moka = { version = "0.12", features = ["sync"] }
lru = "0.12"
reqwest = { workspace = true }
keyring = { workspace = true }

[dev-dependencies]
tempfile = "3.10"

[lints]
workspace = true
