[package]
name = "savant_dream"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
savant_core = { path = "../core" }
savant_memory = { path = "../memory" }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[lints]
workspace = true
