[package]
name = "savant_generation"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
savant_core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
sha2 = "0.10"
base64 = "0.22"
resvg = "0.44"
usvg = "0.44"
tiny-skia = "0.11"
image = "0.25"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
tokio-util = "0.7"
num_cpus = "1.16"
reqwest = { version = "0.12", features = ["json", "stream"] }

[lints]
workspace = true
