[package]
name = "savant_integrations"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
savant_core = { workspace = true }
savant_memory = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
tracing = { workspace = true }
async-trait = "0.1"
base64 = "0.22"
thiserror = "1.0"
dashmap = { workspace = true }
blake3 = "1.5"

[lints]
workspace = true
