[package]
name = "savant_panopticon"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
savant_core = { path = "../core" }
savant_ipc = { path = "../ipc" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
hex = { workspace = true }
opentelemetry-otlp = { version = "0.14", features = ["grpc-tonic", "trace"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"

[lints]
workspace = true
