[package]
name = "savant_sandbox"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
zeroize = "1.8"
snow = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = { workspace = true }
sha2 = "0.10"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "process"] }
futures = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true, features = ["json", "blocking"] }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio-rustls = "0.26"
rustls-pki-types = "1"
webpki-roots = "1"
regex-lite = "0.1"
once_cell = "1.19"
notify = "7"
serde_yaml = "0.9"
sysinfo = "0.35"

[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = "0.3"
landlock = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = [
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_LibraryLoader",
] }

[lints]
workspace = true
