[package]
name = "savant_browser"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
savant_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
base64 = { workspace = true }
thiserror = { workspace = true }
chromiumoxide = "0.9"
url = "2.5"
futures = "0.3"
reqwest = { workspace = true, default-features = false }
regex = "1.10"
toml = "0.8"

[lints]
workspace = true
