[package]
name = "savant_gateway"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
savant_core = { workspace = true }
savant_skills = { workspace = true }
savant_canvas = { workspace = true }
savant_channels = { workspace = true }
savant_echo = { workspace = true }
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.26"
tungstenite = "0.26"
serde = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = "2.0"
rand = { workspace = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "limit"] }
tracing = { workspace = true }
futures = "0.3"
async-stream = "0.3"
dashmap = { workspace = true }
lru = { workspace = true }
hex = "0.4"
uuid = { version = "1.8", features = ["v4"] }
reqwest = { workspace = true }
backoff = { workspace = true }
blake3 = "1.5"
chrono = { workspace = true }
serde_yaml = "0.9.34"
tower_governor = "0.4"

[lints]
workspace = true
