[package]
name = "savant_ipc"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
iceoryx2 = "0.8"
rkyv = { workspace = true }
thiserror = "1.0"
tokio = { workspace = true }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xxhash-rust = { workspace = true }
opentelemetry = { workspace = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["test-util", "macros"] }
tracing-subscriber = "0.3"

[lints]
workspace = true
