[package]
name = "savant_mcp"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
savant_core = { workspace = true }
savant_skills = { workspace = true }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "1a4a52a1732d78d8e63a55652ecab92de442e197" }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
async-trait = { workspace = true }
dashmap = { workspace = true }
url = "2.5"
blake3 = "1.5"

[lints]
workspace = true
