[package]
name = "savant_obsidian"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Obsidian Memory Tree — bidirectional vault projection for Savant's memory substrate"

[dependencies]
savant_core = { workspace = true }
savant_memory = { workspace = true }
savant_ipc = { path = "../ipc" }
savant_security = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
notify = "8.2.0"
async-trait = { workspace = true }

[dev-dependencies]
uuid = { version = "1.0", features = ["v4"] }

[lints]
workspace = true
