[package]
name = "savant_toolforge"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
savant_core = { workspace = true }
savant_skills = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
arc-swap = "1.7"
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
regex = "1.10"
async-trait = { workspace = true }

[lints]
workspace = true
